--- a/package.json
+++ b/package.json
@@ -8,12 +8,10 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0",
-    "watchify": "^3.11.1"
+    "react-scripts": "3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "watch": "watchify bin/index.js -o src/index.js",
     "build": "react-scripts build",
     "test": "react-scripts test"
   },
